    "ip" (input), "mpeinject".
  * Added options --udp-size, --min-udp-size, --max-udp-size, --net-size,
    --min-net-size, --max-net-size to plugin "mpe".
  * Added option --network-id to plugin "nitscan".
  * Added option --strict-xml to "tstabcomp", "tstables" and plugin "tables".
  * Added option --max-packets to "tsdump".
  * The command "tsdump" can now accept multiple input files.

[BUG] Bug fixes:

  * In XML documents which were generated by TSDuck, some characters were not
    properly escaped.
  * In "tsp", in case of output error, when a plugin was slowing down the
    playout speed (such as "regulate"), the command was slow to terminate.

-------------------------------------------------------------------------------

VERSION 3.14-894

[NEW] New commands and plugins:

  * Added plugin "sections".
  * Optional rebuild without teletext support (without plugin "teletext").

[IMP] Improvements on existing commands and plugins:

  * Added option --remove-stream-type to plugin "pmt".
  * Added options --network-name, --network-id and --nit-other to plugin "nit".
  * Added option --provider to plugin "svrename".
  * Added options --include-next and --exclude-current to commands "tstables"
    and "tspsi" and to plugins "tables" and "psi".
  * Added options --rewrite-binary and --rewrite-xml to command "tstables" and
    plugin "tables".
  * Added keywork "system" to option --start in plugin "timeref".
  * Added option --transparent to plugin "merge".
  * Added options --other, --ts-id, --original-network-id to plugin "sdt".
  * Added options --create, --create-after, --bitrate, --inter-packet to
    plugins "pat", "pmt", "bat", "sdt", "nit".
  * Added option --wide-display to command "tsanalyze" and plugin "analyze".
  * Added option --min-interval to command "tsstuff".
  * Added option --scte35 to plugin "pcrextract".
  * In plugin "inject", when all input files have specific repetition rates,