@@ -26,6 +26,7 @@ VERSION 3.15-972
   * Added option --strict-xml to "tstabcomp", "tstables" and plugin "tables".
   * Added option --max-packets to "tsdump".
   * The command "tsdump" can now accept multiple input files.
+  * Added demodulator support in the input plugin "dektec" (e.g. DTA-2137).
 
 [BUG] Bug fixes:
 
